-Implement transaction repository -Refactor tests